--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,6 +1,6 @@
 
 
-body {
+h1 {
     font-family: "Open Sans", sans-serif!important;
 }
 
